--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,7 @@
 databaseChangeLog:
   - include:
-      file: classpath:/db/changelog/changes/001-initial-schema.sql
+      file: changes/001-initial-schema.sql
+      relativeToChangelogFile: true
   - include:
-      file: classpath:/db/changelog/changes/002-insert-test-data.sql
+      file: changes/002-insert-test-data.sql
+      relativeToChangelogFile: true
